# NexxusFlow

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE-NOTES.md  SECURITY.md  TEACHING-GUIDE.md  run-demo.ps1  run-demo.sh
.Jules/: palette.md
.github/: BUILD_SUMMARY.md.example  CONTRIBUTING.md  README_PATH-1.md.example  README_PATH-2.md.example  README_PATH-3.md.example  dev.mk.example
.github/workflows/: ci.yml
crates/afxdp-lab/: Cargo.toml
crates/afxdp-lab/src/: lib.rs  tests.rs
crates/narrative-engine/: Cargo.toml
crates/narrative-engine/src/: lib.rs  tests.rs
crates/observability-core/: Cargo.toml
crates/observability-core/src/: lib.rs  tests.rs
deploy/staging/jwt-auth-lab/: configmap-alertmanager.yaml  configmap-grafana.yaml  configmap-prometheus.yaml  configmap-runtime.yaml  deployment-alertmanager.yaml  deployment-grafana.yaml  deployment-jwt-auth.yaml  deployment-prometheus.yaml  external-secret-jwt-auth.yaml  kustomization.yaml  namespace.yaml  service-alertmanager.yaml  service-grafana.yaml  service-jwt-auth.yaml  service-prometheus.yaml
deploy/staging/jwt-auth-lab-ghcr/: kustomization.yaml
deploy/staging/jwt-auth-lab-kind/: kustomization.yaml  remove-external-secret.yaml  secret-jwt-auth.yaml
deploy/staging/jwt-auth-lab-kind-eso/: clusterrolebinding-reader.yaml  clustersecretstore.yaml  kustomization.yaml  namespace-seed.yaml  seed-secret.yaml  serviceaccount-reader.yaml
docs/: architecture-and-ownership.md  jwt-lab-operations.md  jwt-lab-release-hardening.md  jwt-lab-staging-deploy.md  milestone-plan-sprint7-10.md  production-scope.md  repository-backlog.md  repository-status-matrix.md  runtime-boundaries.md  staging-readiness-review.md  versioning-and-release-policy.md
docs/archive/: README.md
education/: 01-getting-started.md  02-jwt-auth-fundamentals.md  03-observability-deep-dive.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
labs/path-1-sovereign-foundations/chapter-api-rate-limiting/: .README.md.example  .docker-compose.yml.example  .env  .go.mod.example  .grafana-dashboard.json.example  .grafana-dashboards-provisioning.yml.example  .main.go.example  .prometheus-recording-rules.yml.example  Dockerfile.example
labs/path-1-sovereign-foundations/chapter-container-orchestration/: .README.md.example  .docker-compose.yml.example  .env  .go.mod.example  .grafana-dashboard.json.example  .grafana-dashboards-provisioning.yml.example  .main.go.example  .prometheus-recording-rules.yml.example
labs/path-1-sovereign-foundations/chapter-database-security/: .README.md.example  .docker-compose.yml.example  .env  .env.example  .go.mod.example  .grafana-dashboard.json.example  .grafana-provisioning.yml.example  .main.go.example  .prometheus-recording-rules.yml.example  Dockerfile.sql.example
labs/path-1-sovereign-foundations/chapter-jwt-auth/: .dockerignore  .env.example  .grafana-dashboard.json.example  .grafana-dashboards-provisioning.json.example  .grafana-provisioning.yml.example  .prometheus-recording-rules.yml.example  .prometheus.yml.example  .test-scripts.sh.example  Dockerfile.backend  README.md  contract_test.go  docker-compose.yml  docker-compose.yml.example  go.mod  go.sum  main.go  main_test.go  narrative_hooks.rs  prometheus.rules.yml  prometheus.yml  prometheus.yml.example
labs/path-1-sovereign-foundations/chapter-monitoring-stack/: .README.md.example  .docker-compose.yml.example  .env.example  .grafana-dashboards-provisioning.json.example  .grafana-dashboards-provisioning.yml.example  .grafana-provisioning.yml.example  .prometheus-recording-rules.yml.example  .prometheus.yml.example  Dockerfile.prometheus.example
labs/path-2-federated-systems/: .README.md.example  .docker-compose.yml.example  .env.example  .grafana-dashboard.json.example  .grafana-provisioning.yml.example  .main.go.example  .prometheus-recording-rules.yml.example  Dockerfile.consensus.example
labs/path-3-high-performance-net/: .README.md.example  .docker-compose.yml.example  .env.example  .grafana-dashboard.json.example  .grafana-provisioning.yml.example  .main.go.example  .prometheus-recording-rules.yml.example  Dockerfile.packet-handling.example
scripts/: cleanup-jwt-staging-kind.sh  exercise-jwt-staging-kind-eso.sh  exercise-jwt-staging-kind.sh  interactive-walkthrough.sh  rehearse-jwt-staging-rollback.sh  setup-env.ps1  setup-env.sh  smoke-jwt-staging-kind.sh  verify-contract.sh  walkthrough-jwt-lab.sh
