[workspace]
resolver = "2"
members = [
    # Data Plane Crates (Core Hot Path)
    "crates/afxdp-lab",

    # Narrative & Orchestration
    "crates/narrative-engine",

    # Observability Core
    "crates/observability-core",

    # Wire crate for zero-copy packet headers (To be implemented)
    # "crates/wire",  # Add when ready
]

[workspace.package]
version = "0.1.0"
authors = ["NexusFlow Team <team@nexxusflow.dev>"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/nexxusflow/nexusflow-monorepo"

[workspace.dependencies]
# Concurrent Data Structures (Lock-Free, Crossbeam atomics)
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"

# Async Runtime
tokio = { version = "1", features = ["full"] }
async-std = "1"

# Cryptographic Operations (Side-channel resistant AES-GCM, ChaCha20-Poly1305)
aes-gcm-siv = "0.11"
chacha20poly1305 = "0.10"
ring = "0.17"

# Zero-Copy & Memory Safety
bytes = { version = "1", features = ["serde"] }

# Serialization/Deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"

# Observability Stack (Prometheus + Grafana)
prometheus = "0.13"
hyper = { version = "1", features = ["full"] }

# Database (Sovereign First: SQLite default, PostgreSQL for enterprise tier)
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
] }
