[package]
name = "afxdp-lab"
version.workspace = true
authors.workspace = true
edition.workspace = true

description = "Containerized AF_XDP demo harness with zero-copy packet processing for NexusFlow high-performance networking labs"

[[bin]]
name = "packet_handler_bin"
path = "src/bin/packet_handler.rs"

[dependencies]
bytes = { workspace = true }
async-std = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
# Enable real AF_XDP hardware path (requires kernel 5.10+ and compatible NIC)
afxdp-hardware = []
# Enable simulated packet mode (default for CI/lab environments)
simulated-mode = []
default = ["simulated-mode"]
