[package]
name = "narrative-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true

description = "XState-like branching logic + state mutation API for narrative-driven lab scenarios"

[[bin]]
name = "lab_state_mutator"
path = "src/bin/lab_state_mutator.rs"

[dependencies]
async-std = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
